# pytest-watcher

./: pyproject.toml
