[project]
name = "pytest-watcher"
version = "0.4.3"
description = "Automatically rerun your tests on file modifications"
authors = [{name = "Olzhas Arystanov", email = "o.arystanov@gmail.com"}]
license = "MIT"
readme = "README.md"
keywords = ["pytest", "watch", "watcher"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

requires-python = ">=3.13"

dependencies = [
    "watchdog>=2.0.0",
]

[project.urls]
homepage = "https://github.com/olzhasar/pytest-watcher"
repository = "https://github.com/olzhasar/pytest-watcher"
documentation = "https://pytest-watcher.readthedocs.io/en/latest/"

[tool.uv]
package = true

[project.scripts]
pytest-watcher = "pytest_watcher:run"
ptw = "pytest_watcher:run"


[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pytest-mock",
    "freezegun",
    "tox",
]

[tool.ruff.lint]
select = [
    "F",
    "W291",
    "W292",
    "W293",
    "W391",
    "B",
    "I",
    "FAST",
    "SIM",
    "N",
    "E",
]
